# apps/api/src/app.module.ts
@@ -5,6 +5,7 @@ import { ConfigModule } from './config/config.module.js';
 import { HealthModule } from './health/health.module.js';
 import { ConfigurationModule } from './modules/configuration/configuration.module.js';
 import { IdentityModule } from './modules/identity/identity.module.js';
+import { LocationModule } from './modules/location/location.module.js';
 import { ProfileModule } from './modules/profile/profile.module.js';
 import { AnalyticsModule } from './shared/analytics/analytics.module.js';
 import { DatabaseModule } from './shared/database/database.module.js';
@@ -22,6 +23,7 @@ import { RedisModule } from './shared/redis/redis.module.js';
     HealthModule,
     IdentityModule,
     ProfileModule,
+    LocationModule,
     ConfigurationModule,
   ],
   providers: [
