# apps/api/src/shared/database/schema/index.ts
@@ -1,3 +1,4 @@
 export * from './identity.js';
+export * from './location.js';
 export * from './platform.js';
 export * from './profile.js';
